--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,19 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        links:
+            - mariadb:mariadb
+        ports:
+            - 8080:80
+        environment:
+            MYSQL_USERNAME: "${DB_USERNAME}"
+            MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+            PMA_HOST: mariadb
+            UPLOAD_LIMIT: 10000M
+        networks:
+            - sail
     redis:
         image: 'redis:alpine'
         ports:
